// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`France → Norway (regression — behaviour must not change) > is stable for eea / 2026-07-01 1`] = `
{
  "anchorKind": "move-date",
  "corridor": "france-norway",
  "corridorLabel": "France → Norway",
  "counts": {
    "amber": 0,
    "green": 0,
    "red": 15,
    "total": 15,
  },
  "criticalBanner": null,
  "employeeType": "eea",
  "employeeTypeLabel": "EEA national",
  "moveDate": "2026-07-01",
  "moveDatePassedWarning": "This move date has passed. Showing requirements as of 2026-07-01 for reference.",
  "requirements": [
    {
      "actionByDate": "2026-04-08",
      "appliesTo": "all",
      "description": "Confirm the employee’s passport is valid well beyond the move date. Renewals from abroad add weeks — check now, not at the airport.",
      "feasibility": "red",
      "id": "passport-validity",
      "nonObvious": false,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "Employee",
      "title": "Check passport validity",
    },
    {
      "actionByDate": "2026-04-08",
      "appliesTo": "all",
      "description": "Norway left EU accession on the table decades ago: it is in the EEA and Schengen, but NOT the EU. French employees (and HR) often assume intra-EU rules apply. Norway still requires a D-number, skattekort, and — for EEA nationals — police registration. None of these are automatic from an EU passport.",
      "feasibility": "red",
      "id": "norway-eea-not-eu",
      "nonObvious": true,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "HR",
      "title": "Norway is EEA, not EU — don’t assume EU free-movement rules cover everything",
    },
    {
      "actionByDate": "2026-04-22",
      "appliesTo": "all",
      "description": "Start the housing search in the destination city. Rental markets in Oslo, Bergen and Stavanger move fast, and a Norwegian address is needed for several registrations later in the timeline.",
      "feasibility": "red",
      "id": "housing-research",
      "nonObvious": false,
      "offsetLabel": "T−10 weeks",
      "offsetWeeks": -10,
      "owner": "Both",
      "title": "Research housing options",
    },
    {
      "actionByDate": "2026-05-06",
      "appliesTo": "all",
      "dependencyNote": "Blocks: bank account, skattekort, payroll",
      "description": "The D-number is the temporary Norwegian ID everything else hangs off: no D-number means no bank account, no skattekort, and no payroll. Book the Skatteetaten appointment now — HR coordinates, the employee attends with passport and employment contract.",
      "feasibility": "red",
      "id": "d-number",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Both",
      "title": "Apply for D-number at the Norwegian Tax Administration (Skatteetaten)",
    },
    {
      "actionByDate": "2026-05-06",
      "appliesTo": "all",
      "description": "EEA nationals must register their right of residence with the tax office (Skattekontoret) — an EU passport alone is not enough. This step is routinely missed because it has no equivalent in intra-EU moves.",
      "feasibility": "red",
      "id": "eea-right-of-residence",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Employee",
      "title": "Register EU/EEA right of residence at Skattekontoret",
    },
    {
      "actionByDate": "2026-05-20",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number",
      "description": "Norwegian banks require a D-number before opening an account, and payroll cannot be paid to a foreign account long-term. Start as soon as the D-number is issued.",
      "feasibility": "red",
      "id": "bank-account",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "Employee",
      "title": "Open Norwegian bank account",
    },
    {
      "actionByDate": "2026-05-20",
      "appliesTo": "all",
      "description": "Confirm the employing entity is properly registered in the Brønnøysund Register Centre. Payroll reporting (A-melding) and withholding tax registration both depend on it.",
      "feasibility": "red",
      "id": "bronnoysund-registration",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "HR",
      "title": "Verify Norwegian employer Brønnøysund registration is complete",
    },
    {
      "actionByDate": "2026-05-27",
      "appliesTo": "all",
      "dependencyNote": "Must be active before first paycheck",
      "description": "A-melding is Norway’s mandatory monthly employer report of salary, tax deductions and employment to the authorities. It MUST be active before the first paycheck runs — setting it up after the fact is a compliance breach, not a formality.",
      "feasibility": "red",
      "id": "a-melding",
      "nonObvious": true,
      "offsetLabel": "T−5 weeks",
      "offsetWeeks": -5,
      "owner": "HR",
      "title": "Set up A-melding (employer payroll reporting)",
    },
    {
      "actionByDate": "2026-06-03",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number · must precede first paycheck",
      "description": "The skattekort must be in place BEFORE the first paycheck, not after. Without it the employer is legally required to withhold 50% of salary. Apply via Skatteetaten once the D-number exists — HR coordinates the timing against the payroll calendar.",
      "feasibility": "red",
      "id": "skattekort",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Both",
      "title": "Apply for skattekort (tax card)",
    },
    {
      "actionByDate": "2026-06-03",
      "appliesTo": "all",
      "dependencyNote": "Legal deadline: within 3 months of arrival",
      "description": "EEA nationals are legally required to register with the Norwegian police within 3 months of arrival. Appointment slots in Oslo can run out weeks ahead — book now. This is the item HR teams most often assume an EU passport makes unnecessary.",
      "feasibility": "red",
      "id": "police-registration",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Employee",
      "title": "Police registration for EEA nationals",
    },
    {
      "actionByDate": "2026-06-10",
      "appliesTo": "all",
      "description": "Register the employment for Norwegian withholding tax so deductions run correctly from the first payroll cycle.",
      "feasibility": "red",
      "id": "withholding-tax",
      "nonObvious": false,
      "offsetLabel": "T−3 weeks",
      "offsetWeeks": -3,
      "owner": "HR",
      "title": "Withholding tax registration",
    },
    {
      "actionByDate": "2026-06-17",
      "appliesTo": "all",
      "description": "Verify and document the employee’s right to work in Norway before the start date — permit or registered EEA residence, checked and filed.",
      "feasibility": "red",
      "id": "right-to-work",
      "nonObvious": false,
      "offsetLabel": "T−2 weeks",
      "offsetWeeks": -2,
      "owner": "HR",
      "title": "Right-to-work verification",
    },
    {
      "actionByDate": "2026-07-01",
      "appliesTo": "all",
      "dependencyNote": "Payroll cannot run without both",
      "description": "Move-date gate check: payroll cannot run without BOTH the D-number and an active skattekort. Confirm both are in place today, before the first payroll cycle starts.",
      "feasibility": "red",
      "id": "payroll-readiness",
      "nonObvious": false,
      "offsetLabel": "T−0 (move date)",
      "offsetWeeks": 0,
      "owner": "HR",
      "title": "Confirm D-number received and skattekort active",
    },
    {
      "actionByDate": "2026-07-15",
      "appliesTo": "all",
      "description": "Post-arrival check: confirm the police registration appointment actually happened and the confirmation document is on file.",
      "feasibility": "red",
      "id": "police-registration-confirm",
      "nonObvious": false,
      "offsetLabel": "T+2 weeks",
      "offsetWeeks": 2,
      "owner": "Employee",
      "title": "Confirm police registration completed",
    },
    {
      "actionByDate": "2026-07-29",
      "appliesTo": "all",
      "description": "Check the first Norwegian payslip: correct skattekort rate applied, no 50% emergency withholding. If deductions are wrong, fix them in the next A-melding cycle immediately.",
      "feasibility": "red",
      "id": "first-paycheck-check",
      "nonObvious": false,
      "offsetLabel": "T+4 weeks",
      "offsetWeeks": 4,
      "owner": "HR",
      "title": "Verify first paycheck has correct tax deduction",
    },
  ],
  "today": "2026-08-03",
  "urgentSummary": null,
}
`;

exports[`France → Norway (regression — behaviour must not change) > is stable for eea / 2026-09-01 1`] = `
{
  "anchorKind": "move-date",
  "corridor": "france-norway",
  "corridorLabel": "France → Norway",
  "counts": {
    "amber": 2,
    "green": 5,
    "red": 8,
    "total": 15,
  },
  "criticalBanner": null,
  "employeeType": "eea",
  "employeeTypeLabel": "EEA national",
  "moveDate": "2026-09-01",
  "moveDatePassedWarning": null,
  "requirements": [
    {
      "actionByDate": "2026-06-09",
      "appliesTo": "all",
      "description": "Confirm the employee’s passport is valid well beyond the move date. Renewals from abroad add weeks — check now, not at the airport.",
      "feasibility": "red",
      "id": "passport-validity",
      "nonObvious": false,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "Employee",
      "title": "Check passport validity",
    },
    {
      "actionByDate": "2026-06-09",
      "appliesTo": "all",
      "description": "Norway left EU accession on the table decades ago: it is in the EEA and Schengen, but NOT the EU. French employees (and HR) often assume intra-EU rules apply. Norway still requires a D-number, skattekort, and — for EEA nationals — police registration. None of these are automatic from an EU passport.",
      "feasibility": "red",
      "id": "norway-eea-not-eu",
      "nonObvious": true,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "HR",
      "title": "Norway is EEA, not EU — don’t assume EU free-movement rules cover everything",
    },
    {
      "actionByDate": "2026-06-23",
      "appliesTo": "all",
      "description": "Start the housing search in the destination city. Rental markets in Oslo, Bergen and Stavanger move fast, and a Norwegian address is needed for several registrations later in the timeline.",
      "feasibility": "red",
      "id": "housing-research",
      "nonObvious": false,
      "offsetLabel": "T−10 weeks",
      "offsetWeeks": -10,
      "owner": "Both",
      "title": "Research housing options",
    },
    {
      "actionByDate": "2026-07-07",
      "appliesTo": "all",
      "dependencyNote": "Blocks: bank account, skattekort, payroll",
      "description": "The D-number is the temporary Norwegian ID everything else hangs off: no D-number means no bank account, no skattekort, and no payroll. Book the Skatteetaten appointment now — HR coordinates, the employee attends with passport and employment contract.",
      "feasibility": "red",
      "id": "d-number",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Both",
      "title": "Apply for D-number at the Norwegian Tax Administration (Skatteetaten)",
    },
    {
      "actionByDate": "2026-07-07",
      "appliesTo": "all",
      "description": "EEA nationals must register their right of residence with the tax office (Skattekontoret) — an EU passport alone is not enough. This step is routinely missed because it has no equivalent in intra-EU moves.",
      "feasibility": "red",
      "id": "eea-right-of-residence",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Employee",
      "title": "Register EU/EEA right of residence at Skattekontoret",
    },
    {
      "actionByDate": "2026-07-21",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number",
      "description": "Norwegian banks require a D-number before opening an account, and payroll cannot be paid to a foreign account long-term. Start as soon as the D-number is issued.",
      "feasibility": "red",
      "id": "bank-account",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "Employee",
      "title": "Open Norwegian bank account",
    },
    {
      "actionByDate": "2026-07-21",
      "appliesTo": "all",
      "description": "Confirm the employing entity is properly registered in the Brønnøysund Register Centre. Payroll reporting (A-melding) and withholding tax registration both depend on it.",
      "feasibility": "red",
      "id": "bronnoysund-registration",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "HR",
      "title": "Verify Norwegian employer Brønnøysund registration is complete",
    },
    {
      "actionByDate": "2026-07-28",
      "appliesTo": "all",
      "dependencyNote": "Must be active before first paycheck",
      "description": "A-melding is Norway’s mandatory monthly employer report of salary, tax deductions and employment to the authorities. It MUST be active before the first paycheck runs — setting it up after the fact is a compliance breach, not a formality.",
      "feasibility": "red",
      "id": "a-melding",
      "nonObvious": true,
      "offsetLabel": "T−5 weeks",
      "offsetWeeks": -5,
      "owner": "HR",
      "title": "Set up A-melding (employer payroll reporting)",
    },
    {
      "actionByDate": "2026-08-04",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number · must precede first paycheck",
      "description": "The skattekort must be in place BEFORE the first paycheck, not after. Without it the employer is legally required to withhold 50% of salary. Apply via Skatteetaten once the D-number exists — HR coordinates the timing against the payroll calendar.",
      "feasibility": "amber",
      "id": "skattekort",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Both",
      "title": "Apply for skattekort (tax card)",
    },
    {
      "actionByDate": "2026-08-04",
      "appliesTo": "all",
      "dependencyNote": "Legal deadline: within 3 months of arrival",
      "description": "EEA nationals are legally required to register with the Norwegian police within 3 months of arrival. Appointment slots in Oslo can run out weeks ahead — book now. This is the item HR teams most often assume an EU passport makes unnecessary.",
      "feasibility": "amber",
      "id": "police-registration",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Employee",
      "title": "Police registration for EEA nationals",
    },
    {
      "actionByDate": "2026-08-11",
      "appliesTo": "all",
      "description": "Register the employment for Norwegian withholding tax so deductions run correctly from the first payroll cycle.",
      "feasibility": "green",
      "id": "withholding-tax",
      "nonObvious": false,
      "offsetLabel": "T−3 weeks",
      "offsetWeeks": -3,
      "owner": "HR",
      "title": "Withholding tax registration",
    },
    {
      "actionByDate": "2026-08-18",
      "appliesTo": "all",
      "description": "Verify and document the employee’s right to work in Norway before the start date — permit or registered EEA residence, checked and filed.",
      "feasibility": "green",
      "id": "right-to-work",
      "nonObvious": false,
      "offsetLabel": "T−2 weeks",
      "offsetWeeks": -2,
      "owner": "HR",
      "title": "Right-to-work verification",
    },
    {
      "actionByDate": "2026-09-01",
      "appliesTo": "all",
      "dependencyNote": "Payroll cannot run without both",
      "description": "Move-date gate check: payroll cannot run without BOTH the D-number and an active skattekort. Confirm both are in place today, before the first payroll cycle starts.",
      "feasibility": "green",
      "id": "payroll-readiness",
      "nonObvious": false,
      "offsetLabel": "T−0 (move date)",
      "offsetWeeks": 0,
      "owner": "HR",
      "title": "Confirm D-number received and skattekort active",
    },
    {
      "actionByDate": "2026-09-15",
      "appliesTo": "all",
      "description": "Post-arrival check: confirm the police registration appointment actually happened and the confirmation document is on file.",
      "feasibility": "green",
      "id": "police-registration-confirm",
      "nonObvious": false,
      "offsetLabel": "T+2 weeks",
      "offsetWeeks": 2,
      "owner": "Employee",
      "title": "Confirm police registration completed",
    },
    {
      "actionByDate": "2026-09-29",
      "appliesTo": "all",
      "description": "Check the first Norwegian payslip: correct skattekort rate applied, no 50% emergency withholding. If deductions are wrong, fix them in the next A-melding cycle immediately.",
      "feasibility": "green",
      "id": "first-paycheck-check",
      "nonObvious": false,
      "offsetLabel": "T+4 weeks",
      "offsetWeeks": 4,
      "owner": "HR",
      "title": "Verify first paycheck has correct tax deduction",
    },
  ],
  "today": "2026-08-03",
  "urgentSummary": null,
}
`;

exports[`France → Norway (regression — behaviour must not change) > is stable for eea / 2026-12-01 1`] = `
{
  "anchorKind": "move-date",
  "corridor": "france-norway",
  "corridorLabel": "France → Norway",
  "counts": {
    "amber": 0,
    "green": 15,
    "red": 0,
    "total": 15,
  },
  "criticalBanner": null,
  "employeeType": "eea",
  "employeeTypeLabel": "EEA national",
  "moveDate": "2026-12-01",
  "moveDatePassedWarning": null,
  "requirements": [
    {
      "actionByDate": "2026-09-08",
      "appliesTo": "all",
      "description": "Confirm the employee’s passport is valid well beyond the move date. Renewals from abroad add weeks — check now, not at the airport.",
      "feasibility": "green",
      "id": "passport-validity",
      "nonObvious": false,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "Employee",
      "title": "Check passport validity",
    },
    {
      "actionByDate": "2026-09-08",
      "appliesTo": "all",
      "description": "Norway left EU accession on the table decades ago: it is in the EEA and Schengen, but NOT the EU. French employees (and HR) often assume intra-EU rules apply. Norway still requires a D-number, skattekort, and — for EEA nationals — police registration. None of these are automatic from an EU passport.",
      "feasibility": "green",
      "id": "norway-eea-not-eu",
      "nonObvious": true,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "HR",
      "title": "Norway is EEA, not EU — don’t assume EU free-movement rules cover everything",
    },
    {
      "actionByDate": "2026-09-22",
      "appliesTo": "all",
      "description": "Start the housing search in the destination city. Rental markets in Oslo, Bergen and Stavanger move fast, and a Norwegian address is needed for several registrations later in the timeline.",
      "feasibility": "green",
      "id": "housing-research",
      "nonObvious": false,
      "offsetLabel": "T−10 weeks",
      "offsetWeeks": -10,
      "owner": "Both",
      "title": "Research housing options",
    },
    {
      "actionByDate": "2026-10-06",
      "appliesTo": "all",
      "dependencyNote": "Blocks: bank account, skattekort, payroll",
      "description": "The D-number is the temporary Norwegian ID everything else hangs off: no D-number means no bank account, no skattekort, and no payroll. Book the Skatteetaten appointment now — HR coordinates, the employee attends with passport and employment contract.",
      "feasibility": "green",
      "id": "d-number",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Both",
      "title": "Apply for D-number at the Norwegian Tax Administration (Skatteetaten)",
    },
    {
      "actionByDate": "2026-10-06",
      "appliesTo": "all",
      "description": "EEA nationals must register their right of residence with the tax office (Skattekontoret) — an EU passport alone is not enough. This step is routinely missed because it has no equivalent in intra-EU moves.",
      "feasibility": "green",
      "id": "eea-right-of-residence",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Employee",
      "title": "Register EU/EEA right of residence at Skattekontoret",
    },
    {
      "actionByDate": "2026-10-20",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number",
      "description": "Norwegian banks require a D-number before opening an account, and payroll cannot be paid to a foreign account long-term. Start as soon as the D-number is issued.",
      "feasibility": "green",
      "id": "bank-account",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "Employee",
      "title": "Open Norwegian bank account",
    },
    {
      "actionByDate": "2026-10-20",
      "appliesTo": "all",
      "description": "Confirm the employing entity is properly registered in the Brønnøysund Register Centre. Payroll reporting (A-melding) and withholding tax registration both depend on it.",
      "feasibility": "green",
      "id": "bronnoysund-registration",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "HR",
      "title": "Verify Norwegian employer Brønnøysund registration is complete",
    },
    {
      "actionByDate": "2026-10-27",
      "appliesTo": "all",
      "dependencyNote": "Must be active before first paycheck",
      "description": "A-melding is Norway’s mandatory monthly employer report of salary, tax deductions and employment to the authorities. It MUST be active before the first paycheck runs — setting it up after the fact is a compliance breach, not a formality.",
      "feasibility": "green",
      "id": "a-melding",
      "nonObvious": true,
      "offsetLabel": "T−5 weeks",
      "offsetWeeks": -5,
      "owner": "HR",
      "title": "Set up A-melding (employer payroll reporting)",
    },
    {
      "actionByDate": "2026-11-03",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number · must precede first paycheck",
      "description": "The skattekort must be in place BEFORE the first paycheck, not after. Without it the employer is legally required to withhold 50% of salary. Apply via Skatteetaten once the D-number exists — HR coordinates the timing against the payroll calendar.",
      "feasibility": "green",
      "id": "skattekort",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Both",
      "title": "Apply for skattekort (tax card)",
    },
    {
      "actionByDate": "2026-11-03",
      "appliesTo": "all",
      "dependencyNote": "Legal deadline: within 3 months of arrival",
      "description": "EEA nationals are legally required to register with the Norwegian police within 3 months of arrival. Appointment slots in Oslo can run out weeks ahead — book now. This is the item HR teams most often assume an EU passport makes unnecessary.",
      "feasibility": "green",
      "id": "police-registration",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Employee",
      "title": "Police registration for EEA nationals",
    },
    {
      "actionByDate": "2026-11-10",
      "appliesTo": "all",
      "description": "Register the employment for Norwegian withholding tax so deductions run correctly from the first payroll cycle.",
      "feasibility": "green",
      "id": "withholding-tax",
      "nonObvious": false,
      "offsetLabel": "T−3 weeks",
      "offsetWeeks": -3,
      "owner": "HR",
      "title": "Withholding tax registration",
    },
    {
      "actionByDate": "2026-11-17",
      "appliesTo": "all",
      "description": "Verify and document the employee’s right to work in Norway before the start date — permit or registered EEA residence, checked and filed.",
      "feasibility": "green",
      "id": "right-to-work",
      "nonObvious": false,
      "offsetLabel": "T−2 weeks",
      "offsetWeeks": -2,
      "owner": "HR",
      "title": "Right-to-work verification",
    },
    {
      "actionByDate": "2026-12-01",
      "appliesTo": "all",
      "dependencyNote": "Payroll cannot run without both",
      "description": "Move-date gate check: payroll cannot run without BOTH the D-number and an active skattekort. Confirm both are in place today, before the first payroll cycle starts.",
      "feasibility": "green",
      "id": "payroll-readiness",
      "nonObvious": false,
      "offsetLabel": "T−0 (move date)",
      "offsetWeeks": 0,
      "owner": "HR",
      "title": "Confirm D-number received and skattekort active",
    },
    {
      "actionByDate": "2026-12-15",
      "appliesTo": "all",
      "description": "Post-arrival check: confirm the police registration appointment actually happened and the confirmation document is on file.",
      "feasibility": "green",
      "id": "police-registration-confirm",
      "nonObvious": false,
      "offsetLabel": "T+2 weeks",
      "offsetWeeks": 2,
      "owner": "Employee",
      "title": "Confirm police registration completed",
    },
    {
      "actionByDate": "2026-12-29",
      "appliesTo": "all",
      "description": "Check the first Norwegian payslip: correct skattekort rate applied, no 50% emergency withholding. If deductions are wrong, fix them in the next A-melding cycle immediately.",
      "feasibility": "green",
      "id": "first-paycheck-check",
      "nonObvious": false,
      "offsetLabel": "T+4 weeks",
      "offsetWeeks": 4,
      "owner": "HR",
      "title": "Verify first paycheck has correct tax deduction",
    },
  ],
  "today": "2026-08-03",
  "urgentSummary": null,
}
`;

exports[`France → Norway (regression — behaviour must not change) > is stable for non-eea / 2026-08-10 1`] = `
{
  "anchorKind": "move-date",
  "corridor": "france-norway",
  "corridorLabel": "France → Norway",
  "counts": {
    "amber": 0,
    "green": 3,
    "red": 16,
    "total": 19,
  },
  "criticalBanner": "Work permit processing typically takes 8–16 weeks. This timeline may not be achievable. Consult an immigration lawyer before proceeding.",
  "employeeType": "non-eea",
  "employeeTypeLabel": "Non-EEA national (resident in France)",
  "moveDate": "2026-08-10",
  "moveDatePassedWarning": null,
  "requirements": [
    {
      "actionByDate": "2026-04-20",
      "appliesTo": "non-eea",
      "criticalLeadTime": true,
      "dependencyNote": "Blocks the entire move — nothing else matters if the permit is late",
      "description": "Non-EEA nationals cannot legally start work in Norway without a residence permit for skilled workers. UDI processing typically takes 8–16 weeks — this is the single longest lead-time item in the whole move.",
      "feasibility": "red",
      "id": "udi-work-permit",
      "nonObvious": false,
      "offsetLabel": "T−16 weeks",
      "offsetWeeks": -16,
      "owner": "Both",
      "title": "Apply for Norwegian work permit / residence permit for skilled workers via UDI",
    },
    {
      "actionByDate": "2026-05-04",
      "appliesTo": "non-eea",
      "description": "UDI requires a formal offer/confirmation of employment from the Norwegian employer as part of the skilled-worker application. Prepare and send it early so it never blocks the permit file.",
      "feasibility": "red",
      "id": "udi-employer-letter",
      "nonObvious": false,
      "offsetLabel": "T−14 weeks",
      "offsetWeeks": -14,
      "owner": "HR",
      "title": "Provide employer letter of employment confirmation for the UDI application",
    },
    {
      "actionByDate": "2026-05-18",
      "appliesTo": "all",
      "description": "Confirm the employee’s passport is valid well beyond the move date. Renewals from abroad add weeks — check now, not at the airport.",
      "feasibility": "red",
      "id": "passport-validity",
      "nonObvious": false,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "Employee",
      "title": "Check passport validity",
    },
    {
      "actionByDate": "2026-05-18",
      "appliesTo": "non-eea",
      "description": "Some roles require Norwegian recognition of foreign qualifications (NOKUT or sector regulator). Confirm whether the role needs it and start the assessment now.",
      "feasibility": "red",
      "id": "credential-recognition",
      "nonObvious": false,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "Employee",
      "title": "Educational credential recognition (if applicable)",
    },
    {
      "actionByDate": "2026-05-18",
      "appliesTo": "all",
      "description": "Norway left EU accession on the table decades ago: it is in the EEA and Schengen, but NOT the EU. French employees (and HR) often assume intra-EU rules apply. Norway still requires a D-number, skattekort, and — for EEA nationals — police registration. None of these are automatic from an EU passport.",
      "feasibility": "red",
      "id": "norway-eea-not-eu",
      "nonObvious": true,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "HR",
      "title": "Norway is EEA, not EU — don’t assume EU free-movement rules cover everything",
    },
    {
      "actionByDate": "2026-06-01",
      "appliesTo": "all",
      "description": "Start the housing search in the destination city. Rental markets in Oslo, Bergen and Stavanger move fast, and a Norwegian address is needed for several registrations later in the timeline.",
      "feasibility": "red",
      "id": "housing-research",
      "nonObvious": false,
      "offsetLabel": "T−10 weeks",
      "offsetWeeks": -10,
      "owner": "Both",
      "title": "Research housing options",
    },
    {
      "actionByDate": "2026-06-01",
      "appliesTo": "non-eea",
      "description": "Collect the documents the UDI application and onboarding may require: French police clearance (casier judiciaire), medical certificate if the role requires it, and certified translations where needed.",
      "feasibility": "red",
      "id": "supporting-documents",
      "nonObvious": false,
      "offsetLabel": "T−10 weeks",
      "offsetWeeks": -10,
      "owner": "Employee",
      "title": "Gather supporting documents — French police clearance, medical certificate if required",
    },
    {
      "actionByDate": "2026-06-15",
      "appliesTo": "all",
      "dependencyNote": "Blocks: bank account, skattekort, payroll",
      "description": "The D-number is the temporary Norwegian ID everything else hangs off: no D-number means no bank account, no skattekort, and no payroll. Book the Skatteetaten appointment now — HR coordinates, the employee attends with passport and employment contract.",
      "feasibility": "red",
      "id": "d-number",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Both",
      "title": "Apply for D-number at the Norwegian Tax Administration (Skatteetaten)",
    },
    {
      "actionByDate": "2026-06-15",
      "appliesTo": "all",
      "description": "EEA nationals must register their right of residence with the tax office (Skattekontoret) — an EU passport alone is not enough. This step is routinely missed because it has no equivalent in intra-EU moves.",
      "feasibility": "red",
      "id": "eea-right-of-residence",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Employee",
      "title": "Register EU/EEA right of residence at Skattekontoret",
    },
    {
      "actionByDate": "2026-06-29",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number",
      "description": "Norwegian banks require a D-number before opening an account, and payroll cannot be paid to a foreign account long-term. Start as soon as the D-number is issued.",
      "feasibility": "red",
      "id": "bank-account",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "Employee",
      "title": "Open Norwegian bank account",
    },
    {
      "actionByDate": "2026-06-29",
      "appliesTo": "all",
      "description": "Confirm the employing entity is properly registered in the Brønnøysund Register Centre. Payroll reporting (A-melding) and withholding tax registration both depend on it.",
      "feasibility": "red",
      "id": "bronnoysund-registration",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "HR",
      "title": "Verify Norwegian employer Brønnøysund registration is complete",
    },
    {
      "actionByDate": "2026-07-06",
      "appliesTo": "all",
      "dependencyNote": "Must be active before first paycheck",
      "description": "A-melding is Norway’s mandatory monthly employer report of salary, tax deductions and employment to the authorities. It MUST be active before the first paycheck runs — setting it up after the fact is a compliance breach, not a formality.",
      "feasibility": "red",
      "id": "a-melding",
      "nonObvious": true,
      "offsetLabel": "T−5 weeks",
      "offsetWeeks": -5,
      "owner": "HR",
      "title": "Set up A-melding (employer payroll reporting)",
    },
    {
      "actionByDate": "2026-07-13",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number · must precede first paycheck",
      "description": "The skattekort must be in place BEFORE the first paycheck, not after. Without it the employer is legally required to withhold 50% of salary. Apply via Skatteetaten once the D-number exists — HR coordinates the timing against the payroll calendar.",
      "feasibility": "red",
      "id": "skattekort",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Both",
      "title": "Apply for skattekort (tax card)",
    },
    {
      "actionByDate": "2026-07-13",
      "appliesTo": "all",
      "dependencyNote": "Legal deadline: within 3 months of arrival",
      "description": "EEA nationals are legally required to register with the Norwegian police within 3 months of arrival. Appointment slots in Oslo can run out weeks ahead — book now. This is the item HR teams most often assume an EU passport makes unnecessary.",
      "feasibility": "red",
      "id": "police-registration",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Employee",
      "title": "Police registration for EEA nationals",
    },
    {
      "actionByDate": "2026-07-20",
      "appliesTo": "all",
      "description": "Register the employment for Norwegian withholding tax so deductions run correctly from the first payroll cycle.",
      "feasibility": "red",
      "id": "withholding-tax",
      "nonObvious": false,
      "offsetLabel": "T−3 weeks",
      "offsetWeeks": -3,
      "owner": "HR",
      "title": "Withholding tax registration",
    },
    {
      "actionByDate": "2026-07-27",
      "appliesTo": "all",
      "description": "Verify and document the employee’s right to work in Norway before the start date — permit or registered EEA residence, checked and filed.",
      "feasibility": "red",
      "id": "right-to-work",
      "nonObvious": false,
      "offsetLabel": "T−2 weeks",
      "offsetWeeks": -2,
      "owner": "HR",
      "title": "Right-to-work verification",
    },
    {
      "actionByDate": "2026-08-10",
      "appliesTo": "all",
      "dependencyNote": "Payroll cannot run without both",
      "description": "Move-date gate check: payroll cannot run without BOTH the D-number and an active skattekort. Confirm both are in place today, before the first payroll cycle starts.",
      "feasibility": "green",
      "id": "payroll-readiness",
      "nonObvious": false,
      "offsetLabel": "T−0 (move date)",
      "offsetWeeks": 0,
      "owner": "HR",
      "title": "Confirm D-number received and skattekort active",
    },
    {
      "actionByDate": "2026-08-24",
      "appliesTo": "all",
      "description": "Post-arrival check: confirm the police registration appointment actually happened and the confirmation document is on file.",
      "feasibility": "green",
      "id": "police-registration-confirm",
      "nonObvious": false,
      "offsetLabel": "T+2 weeks",
      "offsetWeeks": 2,
      "owner": "Employee",
      "title": "Confirm police registration completed",
    },
    {
      "actionByDate": "2026-09-07",
      "appliesTo": "all",
      "description": "Check the first Norwegian payslip: correct skattekort rate applied, no 50% emergency withholding. If deductions are wrong, fix them in the next A-melding cycle immediately.",
      "feasibility": "green",
      "id": "first-paycheck-check",
      "nonObvious": false,
      "offsetLabel": "T+4 weeks",
      "offsetWeeks": 4,
      "owner": "HR",
      "title": "Verify first paycheck has correct tax deduction",
    },
  ],
  "today": "2026-08-03",
  "urgentSummary": "16 requirements are overdue or critically urgent.",
}
`;

exports[`France → Norway (regression — behaviour must not change) > is stable for non-eea / 2026-09-01 1`] = `
{
  "anchorKind": "move-date",
  "corridor": "france-norway",
  "corridorLabel": "France → Norway",
  "counts": {
    "amber": 2,
    "green": 5,
    "red": 12,
    "total": 19,
  },
  "criticalBanner": "Work permit processing typically takes 8–16 weeks. This timeline may not be achievable. Consult an immigration lawyer before proceeding.",
  "employeeType": "non-eea",
  "employeeTypeLabel": "Non-EEA national (resident in France)",
  "moveDate": "2026-09-01",
  "moveDatePassedWarning": null,
  "requirements": [
    {
      "actionByDate": "2026-05-12",
      "appliesTo": "non-eea",
      "criticalLeadTime": true,
      "dependencyNote": "Blocks the entire move — nothing else matters if the permit is late",
      "description": "Non-EEA nationals cannot legally start work in Norway without a residence permit for skilled workers. UDI processing typically takes 8–16 weeks — this is the single longest lead-time item in the whole move.",
      "feasibility": "red",
      "id": "udi-work-permit",
      "nonObvious": false,
      "offsetLabel": "T−16 weeks",
      "offsetWeeks": -16,
      "owner": "Both",
      "title": "Apply for Norwegian work permit / residence permit for skilled workers via UDI",
    },
    {
      "actionByDate": "2026-05-26",
      "appliesTo": "non-eea",
      "description": "UDI requires a formal offer/confirmation of employment from the Norwegian employer as part of the skilled-worker application. Prepare and send it early so it never blocks the permit file.",
      "feasibility": "red",
      "id": "udi-employer-letter",
      "nonObvious": false,
      "offsetLabel": "T−14 weeks",
      "offsetWeeks": -14,
      "owner": "HR",
      "title": "Provide employer letter of employment confirmation for the UDI application",
    },
    {
      "actionByDate": "2026-06-09",
      "appliesTo": "all",
      "description": "Confirm the employee’s passport is valid well beyond the move date. Renewals from abroad add weeks — check now, not at the airport.",
      "feasibility": "red",
      "id": "passport-validity",
      "nonObvious": false,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "Employee",
      "title": "Check passport validity",
    },
    {
      "actionByDate": "2026-06-09",
      "appliesTo": "non-eea",
      "description": "Some roles require Norwegian recognition of foreign qualifications (NOKUT or sector regulator). Confirm whether the role needs it and start the assessment now.",
      "feasibility": "red",
      "id": "credential-recognition",
      "nonObvious": false,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "Employee",
      "title": "Educational credential recognition (if applicable)",
    },
    {
      "actionByDate": "2026-06-09",
      "appliesTo": "all",
      "description": "Norway left EU accession on the table decades ago: it is in the EEA and Schengen, but NOT the EU. French employees (and HR) often assume intra-EU rules apply. Norway still requires a D-number, skattekort, and — for EEA nationals — police registration. None of these are automatic from an EU passport.",
      "feasibility": "red",
      "id": "norway-eea-not-eu",
      "nonObvious": true,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "HR",
      "title": "Norway is EEA, not EU — don’t assume EU free-movement rules cover everything",
    },
    {
      "actionByDate": "2026-06-23",
      "appliesTo": "all",
      "description": "Start the housing search in the destination city. Rental markets in Oslo, Bergen and Stavanger move fast, and a Norwegian address is needed for several registrations later in the timeline.",
      "feasibility": "red",
      "id": "housing-research",
      "nonObvious": false,
      "offsetLabel": "T−10 weeks",
      "offsetWeeks": -10,
      "owner": "Both",
      "title": "Research housing options",
    },
    {
      "actionByDate": "2026-06-23",
      "appliesTo": "non-eea",
      "description": "Collect the documents the UDI application and onboarding may require: French police clearance (casier judiciaire), medical certificate if the role requires it, and certified translations where needed.",
      "feasibility": "red",
      "id": "supporting-documents",
      "nonObvious": false,
      "offsetLabel": "T−10 weeks",
      "offsetWeeks": -10,
      "owner": "Employee",
      "title": "Gather supporting documents — French police clearance, medical certificate if required",
    },
    {
      "actionByDate": "2026-07-07",
      "appliesTo": "all",
      "dependencyNote": "Blocks: bank account, skattekort, payroll",
      "description": "The D-number is the temporary Norwegian ID everything else hangs off: no D-number means no bank account, no skattekort, and no payroll. Book the Skatteetaten appointment now — HR coordinates, the employee attends with passport and employment contract.",
      "feasibility": "red",
      "id": "d-number",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Both",
      "title": "Apply for D-number at the Norwegian Tax Administration (Skatteetaten)",
    },
    {
      "actionByDate": "2026-07-07",
      "appliesTo": "all",
      "description": "EEA nationals must register their right of residence with the tax office (Skattekontoret) — an EU passport alone is not enough. This step is routinely missed because it has no equivalent in intra-EU moves.",
      "feasibility": "red",
      "id": "eea-right-of-residence",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Employee",
      "title": "Register EU/EEA right of residence at Skattekontoret",
    },
    {
      "actionByDate": "2026-07-21",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number",
      "description": "Norwegian banks require a D-number before opening an account, and payroll cannot be paid to a foreign account long-term. Start as soon as the D-number is issued.",
      "feasibility": "red",
      "id": "bank-account",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "Employee",
      "title": "Open Norwegian bank account",
    },
    {
      "actionByDate": "2026-07-21",
      "appliesTo": "all",
      "description": "Confirm the employing entity is properly registered in the Brønnøysund Register Centre. Payroll reporting (A-melding) and withholding tax registration both depend on it.",
      "feasibility": "red",
      "id": "bronnoysund-registration",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "HR",
      "title": "Verify Norwegian employer Brønnøysund registration is complete",
    },
    {
      "actionByDate": "2026-07-28",
      "appliesTo": "all",
      "dependencyNote": "Must be active before first paycheck",
      "description": "A-melding is Norway’s mandatory monthly employer report of salary, tax deductions and employment to the authorities. It MUST be active before the first paycheck runs — setting it up after the fact is a compliance breach, not a formality.",
      "feasibility": "red",
      "id": "a-melding",
      "nonObvious": true,
      "offsetLabel": "T−5 weeks",
      "offsetWeeks": -5,
      "owner": "HR",
      "title": "Set up A-melding (employer payroll reporting)",
    },
    {
      "actionByDate": "2026-08-04",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number · must precede first paycheck",
      "description": "The skattekort must be in place BEFORE the first paycheck, not after. Without it the employer is legally required to withhold 50% of salary. Apply via Skatteetaten once the D-number exists — HR coordinates the timing against the payroll calendar.",
      "feasibility": "amber",
      "id": "skattekort",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Both",
      "title": "Apply for skattekort (tax card)",
    },
    {
      "actionByDate": "2026-08-04",
      "appliesTo": "all",
      "dependencyNote": "Legal deadline: within 3 months of arrival",
      "description": "EEA nationals are legally required to register with the Norwegian police within 3 months of arrival. Appointment slots in Oslo can run out weeks ahead — book now. This is the item HR teams most often assume an EU passport makes unnecessary.",
      "feasibility": "amber",
      "id": "police-registration",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Employee",
      "title": "Police registration for EEA nationals",
    },
    {
      "actionByDate": "2026-08-11",
      "appliesTo": "all",
      "description": "Register the employment for Norwegian withholding tax so deductions run correctly from the first payroll cycle.",
      "feasibility": "green",
      "id": "withholding-tax",
      "nonObvious": false,
      "offsetLabel": "T−3 weeks",
      "offsetWeeks": -3,
      "owner": "HR",
      "title": "Withholding tax registration",
    },
    {
      "actionByDate": "2026-08-18",
      "appliesTo": "all",
      "description": "Verify and document the employee’s right to work in Norway before the start date — permit or registered EEA residence, checked and filed.",
      "feasibility": "green",
      "id": "right-to-work",
      "nonObvious": false,
      "offsetLabel": "T−2 weeks",
      "offsetWeeks": -2,
      "owner": "HR",
      "title": "Right-to-work verification",
    },
    {
      "actionByDate": "2026-09-01",
      "appliesTo": "all",
      "dependencyNote": "Payroll cannot run without both",
      "description": "Move-date gate check: payroll cannot run without BOTH the D-number and an active skattekort. Confirm both are in place today, before the first payroll cycle starts.",
      "feasibility": "green",
      "id": "payroll-readiness",
      "nonObvious": false,
      "offsetLabel": "T−0 (move date)",
      "offsetWeeks": 0,
      "owner": "HR",
      "title": "Confirm D-number received and skattekort active",
    },
    {
      "actionByDate": "2026-09-15",
      "appliesTo": "all",
      "description": "Post-arrival check: confirm the police registration appointment actually happened and the confirmation document is on file.",
      "feasibility": "green",
      "id": "police-registration-confirm",
      "nonObvious": false,
      "offsetLabel": "T+2 weeks",
      "offsetWeeks": 2,
      "owner": "Employee",
      "title": "Confirm police registration completed",
    },
    {
      "actionByDate": "2026-09-29",
      "appliesTo": "all",
      "description": "Check the first Norwegian payslip: correct skattekort rate applied, no 50% emergency withholding. If deductions are wrong, fix them in the next A-melding cycle immediately.",
      "feasibility": "green",
      "id": "first-paycheck-check",
      "nonObvious": false,
      "offsetLabel": "T+4 weeks",
      "offsetWeeks": 4,
      "owner": "HR",
      "title": "Verify first paycheck has correct tax deduction",
    },
  ],
  "today": "2026-08-03",
  "urgentSummary": null,
}
`;

exports[`France → Norway (regression — behaviour must not change) > is stable for non-eea / 2026-12-01 1`] = `
{
  "anchorKind": "move-date",
  "corridor": "france-norway",
  "corridorLabel": "France → Norway",
  "counts": {
    "amber": 0,
    "green": 19,
    "red": 0,
    "total": 19,
  },
  "criticalBanner": null,
  "employeeType": "non-eea",
  "employeeTypeLabel": "Non-EEA national (resident in France)",
  "moveDate": "2026-12-01",
  "moveDatePassedWarning": null,
  "requirements": [
    {
      "actionByDate": "2026-08-11",
      "appliesTo": "non-eea",
      "criticalLeadTime": true,
      "dependencyNote": "Blocks the entire move — nothing else matters if the permit is late",
      "description": "Non-EEA nationals cannot legally start work in Norway without a residence permit for skilled workers. UDI processing typically takes 8–16 weeks — this is the single longest lead-time item in the whole move.",
      "feasibility": "green",
      "id": "udi-work-permit",
      "nonObvious": false,
      "offsetLabel": "T−16 weeks",
      "offsetWeeks": -16,
      "owner": "Both",
      "title": "Apply for Norwegian work permit / residence permit for skilled workers via UDI",
    },
    {
      "actionByDate": "2026-08-25",
      "appliesTo": "non-eea",
      "description": "UDI requires a formal offer/confirmation of employment from the Norwegian employer as part of the skilled-worker application. Prepare and send it early so it never blocks the permit file.",
      "feasibility": "green",
      "id": "udi-employer-letter",
      "nonObvious": false,
      "offsetLabel": "T−14 weeks",
      "offsetWeeks": -14,
      "owner": "HR",
      "title": "Provide employer letter of employment confirmation for the UDI application",
    },
    {
      "actionByDate": "2026-09-08",
      "appliesTo": "all",
      "description": "Confirm the employee’s passport is valid well beyond the move date. Renewals from abroad add weeks — check now, not at the airport.",
      "feasibility": "green",
      "id": "passport-validity",
      "nonObvious": false,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "Employee",
      "title": "Check passport validity",
    },
    {
      "actionByDate": "2026-09-08",
      "appliesTo": "non-eea",
      "description": "Some roles require Norwegian recognition of foreign qualifications (NOKUT or sector regulator). Confirm whether the role needs it and start the assessment now.",
      "feasibility": "green",
      "id": "credential-recognition",
      "nonObvious": false,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "Employee",
      "title": "Educational credential recognition (if applicable)",
    },
    {
      "actionByDate": "2026-09-08",
      "appliesTo": "all",
      "description": "Norway left EU accession on the table decades ago: it is in the EEA and Schengen, but NOT the EU. French employees (and HR) often assume intra-EU rules apply. Norway still requires a D-number, skattekort, and — for EEA nationals — police registration. None of these are automatic from an EU passport.",
      "feasibility": "green",
      "id": "norway-eea-not-eu",
      "nonObvious": true,
      "offsetLabel": "T−12 weeks",
      "offsetWeeks": -12,
      "owner": "HR",
      "title": "Norway is EEA, not EU — don’t assume EU free-movement rules cover everything",
    },
    {
      "actionByDate": "2026-09-22",
      "appliesTo": "all",
      "description": "Start the housing search in the destination city. Rental markets in Oslo, Bergen and Stavanger move fast, and a Norwegian address is needed for several registrations later in the timeline.",
      "feasibility": "green",
      "id": "housing-research",
      "nonObvious": false,
      "offsetLabel": "T−10 weeks",
      "offsetWeeks": -10,
      "owner": "Both",
      "title": "Research housing options",
    },
    {
      "actionByDate": "2026-09-22",
      "appliesTo": "non-eea",
      "description": "Collect the documents the UDI application and onboarding may require: French police clearance (casier judiciaire), medical certificate if the role requires it, and certified translations where needed.",
      "feasibility": "green",
      "id": "supporting-documents",
      "nonObvious": false,
      "offsetLabel": "T−10 weeks",
      "offsetWeeks": -10,
      "owner": "Employee",
      "title": "Gather supporting documents — French police clearance, medical certificate if required",
    },
    {
      "actionByDate": "2026-10-06",
      "appliesTo": "all",
      "dependencyNote": "Blocks: bank account, skattekort, payroll",
      "description": "The D-number is the temporary Norwegian ID everything else hangs off: no D-number means no bank account, no skattekort, and no payroll. Book the Skatteetaten appointment now — HR coordinates, the employee attends with passport and employment contract.",
      "feasibility": "green",
      "id": "d-number",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Both",
      "title": "Apply for D-number at the Norwegian Tax Administration (Skatteetaten)",
    },
    {
      "actionByDate": "2026-10-06",
      "appliesTo": "all",
      "description": "EEA nationals must register their right of residence with the tax office (Skattekontoret) — an EU passport alone is not enough. This step is routinely missed because it has no equivalent in intra-EU moves.",
      "feasibility": "green",
      "id": "eea-right-of-residence",
      "nonObvious": true,
      "offsetLabel": "T−8 weeks",
      "offsetWeeks": -8,
      "owner": "Employee",
      "title": "Register EU/EEA right of residence at Skattekontoret",
    },
    {
      "actionByDate": "2026-10-20",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number",
      "description": "Norwegian banks require a D-number before opening an account, and payroll cannot be paid to a foreign account long-term. Start as soon as the D-number is issued.",
      "feasibility": "green",
      "id": "bank-account",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "Employee",
      "title": "Open Norwegian bank account",
    },
    {
      "actionByDate": "2026-10-20",
      "appliesTo": "all",
      "description": "Confirm the employing entity is properly registered in the Brønnøysund Register Centre. Payroll reporting (A-melding) and withholding tax registration both depend on it.",
      "feasibility": "green",
      "id": "bronnoysund-registration",
      "nonObvious": false,
      "offsetLabel": "T−6 weeks",
      "offsetWeeks": -6,
      "owner": "HR",
      "title": "Verify Norwegian employer Brønnøysund registration is complete",
    },
    {
      "actionByDate": "2026-10-27",
      "appliesTo": "all",
      "dependencyNote": "Must be active before first paycheck",
      "description": "A-melding is Norway’s mandatory monthly employer report of salary, tax deductions and employment to the authorities. It MUST be active before the first paycheck runs — setting it up after the fact is a compliance breach, not a formality.",
      "feasibility": "green",
      "id": "a-melding",
      "nonObvious": true,
      "offsetLabel": "T−5 weeks",
      "offsetWeeks": -5,
      "owner": "HR",
      "title": "Set up A-melding (employer payroll reporting)",
    },
    {
      "actionByDate": "2026-11-03",
      "appliesTo": "all",
      "dependencyNote": "Requires D-number · must precede first paycheck",
      "description": "The skattekort must be in place BEFORE the first paycheck, not after. Without it the employer is legally required to withhold 50% of salary. Apply via Skatteetaten once the D-number exists — HR coordinates the timing against the payroll calendar.",
      "feasibility": "green",
      "id": "skattekort",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Both",
      "title": "Apply for skattekort (tax card)",
    },
    {
      "actionByDate": "2026-11-03",
      "appliesTo": "all",
      "dependencyNote": "Legal deadline: within 3 months of arrival",
      "description": "EEA nationals are legally required to register with the Norwegian police within 3 months of arrival. Appointment slots in Oslo can run out weeks ahead — book now. This is the item HR teams most often assume an EU passport makes unnecessary.",
      "feasibility": "green",
      "id": "police-registration",
      "nonObvious": true,
      "offsetLabel": "T−4 weeks",
      "offsetWeeks": -4,
      "owner": "Employee",
      "title": "Police registration for EEA nationals",
    },
    {
      "actionByDate": "2026-11-10",
      "appliesTo": "all",
      "description": "Register the employment for Norwegian withholding tax so deductions run correctly from the first payroll cycle.",
      "feasibility": "green",
      "id": "withholding-tax",
      "nonObvious": false,
      "offsetLabel": "T−3 weeks",
      "offsetWeeks": -3,
      "owner": "HR",
      "title": "Withholding tax registration",
    },
    {
      "actionByDate": "2026-11-17",
      "appliesTo": "all",
      "description": "Verify and document the employee’s right to work in Norway before the start date — permit or registered EEA residence, checked and filed.",
      "feasibility": "green",
      "id": "right-to-work",
      "nonObvious": false,
      "offsetLabel": "T−2 weeks",
      "offsetWeeks": -2,
      "owner": "HR",
      "title": "Right-to-work verification",
    },
    {
      "actionByDate": "2026-12-01",
      "appliesTo": "all",
      "dependencyNote": "Payroll cannot run without both",
      "description": "Move-date gate check: payroll cannot run without BOTH the D-number and an active skattekort. Confirm both are in place today, before the first payroll cycle starts.",
      "feasibility": "green",
      "id": "payroll-readiness",
      "nonObvious": false,
      "offsetLabel": "T−0 (move date)",
      "offsetWeeks": 0,
      "owner": "HR",
      "title": "Confirm D-number received and skattekort active",
    },
    {
      "actionByDate": "2026-12-15",
      "appliesTo": "all",
      "description": "Post-arrival check: confirm the police registration appointment actually happened and the confirmation document is on file.",
      "feasibility": "green",
      "id": "police-registration-confirm",
      "nonObvious": false,
      "offsetLabel": "T+2 weeks",
      "offsetWeeks": 2,
      "owner": "Employee",
      "title": "Confirm police registration completed",
    },
    {
      "actionByDate": "2026-12-29",
      "appliesTo": "all",
      "description": "Check the first Norwegian payslip: correct skattekort rate applied, no 50% emergency withholding. If deductions are wrong, fix them in the next A-melding cycle immediately.",
      "feasibility": "green",
      "id": "first-paycheck-check",
      "nonObvious": false,
      "offsetLabel": "T+4 weeks",
      "offsetWeeks": 4,
      "owner": "HR",
      "title": "Verify first paycheck has correct tax deduction",
    },
  ],
  "today": "2026-08-03",
  "urgentSummary": null,
}
`;
